@@ -15,3 +15,4 @@ Carlos Beltran (sound code via YARP1)
 Jonas Ruesch (video4linux support in ffmpeg_grabber)
 Assif Mirza (dimax_u2c driver, helped debug cmake library finding issues)
 Hatice Kose-Bagci (updated FindPortAudio script for Windows)
+Jose Gaspar (helped modify example/external/nameclient.cpp example for windows)
