@@ -1,5 +1,8 @@
 2007-01-08  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
+	* src/libYARP_dev/src/opencv_grabber: Made driver pay attention 
+	to width, height.
+
 	* src/libYARP_OS/src/ffmpeg: Added FfmpegWriter as basic
 	interface to ffmpeg's media writing capability.
 
